--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threefy",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A javascript 3D library that integrates React and three.js",
   "type": "module",
   "files": [
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nova-graphix/threefy.git"
+    "url": "git+https://github.com/nova-graphix/threefy.git"
   },
   "sideEffects": false,
   "scripts": {
